--- a/cryptofetch/templates/home.html
+++ b/cryptofetch/templates/home.html
@@ -28,7 +28,7 @@
 <body>
   <header class="header">
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-      <h2 class="m-auto text-danger">CryptoFetch</h2>
+      <h2 class="m-auto text-info">CryptoFetch</h2>
     </nav>
   </header>
 
